--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BurgerShot</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="stylesheet" href="mediaqueries.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BurgerShot</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<header>
-	  <div class="logo">
-		<img src="shot/iconlogo.png" alt="BurherShot Logo">
-	  </div>
-	  <nav>
-		<ul>
-		  <li><a href="#home">Home</a></li>
-		  <li><a href="#about">About</a></li>
-		  <li><a href="#menu">Menu</a></li>
-		  <li><a href="#reservations">Reservations</a></li>
-		  <li><a href="#contact">Contact</a></li>
-		</ul>
-	  </nav>
-    </nav>
-	</header>
+    <header>
+        <div class="logo">
+            <img src="shot/iconlogo.png" alt="BurgerShot Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#reservations">Reservations</a></li>
+            </ul>
+        </nav>
+    </header>
 <section class="hero">
   <div class="hero-content">
     <h1>Welcome to BurgerShot</h1>
