--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#menu">Menu</a></li>
+                <li><a href="menu.html">Menu</a></li>
                 <li><a href="#reservations">Reservations</a></li>
             </ul>
         </nav>
@@ -23,7 +23,7 @@
   <div class="hero-content">
     <h1>Welcome to BurgerShot</h1>
     <p>Experience the Taste of Perfection</p>
-    <a href="#menu" class="btn">Explore Our Menu</a>
+    <a href="menu.html" class="btn">Explore Our Menu</a>
   </div>
 </section>
 
@@ -32,7 +32,7 @@
     <h2>About BurgerShot</h2>
     <p>Experience the finest gourmet burgers in a cozy and rustic atmosphere. At BurgerShot, we are dedicated to delivering exceptional flavors that will tantalize your taste buds.</p>
     <p>Our chefs meticulously craft each burger using locally sourced ingredients and unique flavor combinations. From juicy beef patties to mouthwatering vegetarian options, there's something for everyone.</p>
-    <a href="#menu" class="btn">Explore Our Menu</a>
+    <a href="menu.html" class="btn">Explore Our Menu</a>
   </div>
   <div class="about-image">
     <img src="shot/about-image.jpg" alt="About Image">
@@ -146,8 +146,8 @@
     </div>
     <nav class="footer-links">
       <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Menu</a>
+      <a href="about.html">About</a>
+      <a href="menu.html">Menu</a>
       <a href="#">Reservations</a>
       <a href="#">Testimonials</a>
       <a href="#">Gallery</a>
