--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,26 @@
                 </div>
             </div>
         </section>
-        <footer>
+        <footer class="footer">
+            <div class="footer-content">
+    <div class="footer-logo">
+      <img src="shot/iconlogo.png" alt="Logo">
+    </div>
+    <nav class="footer-links">
+      <a href="#">Home</a>
+      <a href="about.html">About</a>
+      <a href="menu.html">Menu</a>
+      <a href="#">Reservations</a>
+      <a href="#">Testimonials</a>
+      <a href="#">Gallery</a>
+      <a href="#">Contact</a>
+    </nav>
+    <div class="footer-social">
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+  </div>
             <p>&copy; 2024 BurgerShot. All rights reserved.</p>
         </footer>
     </body>
